# mcp-agent-framework

./: README.md  fibonacci_spell.py  pyproject.toml  requirements.txt
1_strands_basics/: simple_agent.py
2_built_in_tools/: agent_with_built_in_tools.py  bonus_quest.py
3_custom_tools/: agent_with_dice_roll_tool.py
4_mcp_integration/: dice_roll_mcp_server.py  gamemaster_mcp_client.py
5_a2a_integration/agents/character_agent/: character_agent.py  characters.json
5_a2a_integration/agents/gamemaster_orchestrator/: gamemaster_orchestrator.py
5_a2a_integration/agents/rules_agent/: rules_agent.py
5_a2a_integration/test/: test.http
5_a2a_integration/utils/: create_knowledge_base.py
repl_state/: repl_state.pkl
